# 8031-matrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build.bat  custom-compiler-sdcc-mmcs51.yaml  main.asm  main.c  main.hex  ucsim.bat
8031/: CMakeLists.txt  sim-board.bat
8031/board/: 8031-board.h  CMakeLists.txt  main.c  main.h  ucsim.bat
docs/: sdcc.md
docs/tests/: cmain.c  cmain1.c  custom-compiler-sdcc-stm8.yaml  teste.c
src/: .gitignore  CMakeLists.txt  custom-compiler-sdcc-mmcs51.yaml  main.c  main.h
tests/: CMakeLists-20231020.txt  CMakeLists-K33-RYZEN.txt  CMakeLists.txt  K33-8031-001.asm  K33-8031-001.hex  K33-8031.asm  K33-8031.hex  main.asm  main.c.ok  simu.bat  toolchain.cmake  uart.c  uart.h
tests/assemble/: K33-8031-001.asm  K33-8031-001.hex  K33-8031-002.asm  K33-8031-002.hex  build.bat  ucsim.bat
tests/sdcc/: .gitignore  build.bat  main.asm  main.hex  ucsim.bat
